Fix pipe bug with OS X emacs --daemon (Bug#16262).

* emacs.c (main) [DAEMON_MUST_EXEC]: Clear the close-on-exec
flags on the daemon pipe ends before execing.